@@ -77,6 +77,9 @@ location = root
 
 [MetaNoIndex]
 directory = profiles
+directory = corpus
 
 [Author::Plicease::UploadToMatrix]
 [FakeRelease]
+
+
