@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - add [Author::Plicease::Thanks]
 
 1.09      2013-06-22 09:47:47 EST5EDT
   - add an installer option for [@Author::Plicease]
